--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- 9AM -->
       <div class="input-group input-group-lg" data-hour="9">
         <div class="input-group-prepend">
-          <!-- Added time-block class -->
+          <!--added time-block class -->
           <span class="input-group-text time-block block1"></span>
         </div>
         <input type="text" class="form-control form9" aria-label="Large" />
